--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "chatbot-whatsapp",
   "version": "1.0.0",
   "description": "Chatbot para WhatsApp utilizando whatsapp-web.js",
-  "main": "chatbot.js"
+  "main": "chatbot.js",  
   "scripts": {
-    "start": "node chatbot.js" 
+    "start": "node chatbot.js"  
   },
   "dependencies": {
     "moment-timezone": "^0.5.45",
